--- a/elk/elasticsearch-detail/elasticsearch-persistentvolume.yaml
+++ b/elk/elasticsearch-detail/elasticsearch-persistentvolume.yaml
@@ -13,7 +13,7 @@ spec:
   accessModes:
   - ReadWriteOnce
   claimRef:
-    namespace: ocean
+    namespace: elk
     name: elasticsearch-persistent-storage-elasticsearch-node-0
   persistentVolumeReclaimPolicy: Delete
   hostPath:
