--- a/elk/elasticsearch-detail/elasticsearch-statefulset.yaml
+++ b/elk/elasticsearch-detail/elasticsearch-statefulset.yaml
@@ -21,6 +21,7 @@ spec:
       - name: elasticsearch
         #image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.9.3
         image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.23
+        imagePullPolicy: IfNotPresent
         env:
         - name: CLUSTER_NAME
           value: ocean
