--- a/elk/kibana-detail/kibana-service.yaml
+++ b/elk/kibana-detail/kibana-service.yaml
@@ -7,13 +7,13 @@ metadata:
     app: kibana
 spec:
   ports:
-  - nodePort: 30930
-    port: 33000
+  - port: 33000
     name: view
     targetPort: 5601
-  type: NodePort
+    #nodePort: 30930
+  #type: NodePort
   #type: LoadBalancer
-  #externalIPs:
-  #- 192.168.1.10
+  externalIPs:
+  - 192.168.1.10
   selector:
     app: kibana
