--- a/rabbitmq/rabbitmq-detail/rabbitmq-statefulset.yaml
+++ b/rabbitmq/rabbitmq-detail/rabbitmq-statefulset.yaml
@@ -25,10 +25,15 @@ spec:
         #- name: RABBITMQ_ERLANG_COOKIE
         #  value: "1WqgH8N2v1qDBDZDbNy8Bg9IkPWLEpu79m6q+0t36lQ="
         volumeMounts:
-        - mountPath: /var/lib/rabbitmq
-          name: rabbitmq-data
+        - name: rabbitmq-data
+          mountPath: /var/lib/rabbitmq
+        - name: tz-seoul
+          mountPath: /etc/localtime
       volumes:
         - name: rabbitmq-data
           hostPath:
             path: /data/rabbitmq
             type: DirectoryOrCreate
+        - name: tz-seoul
+          hostPath:
+            path: /usr/share/zoneinfo/Asia/Seoul
